# vcpkg-mini-project

./: .gitignore  CMakeLists.txt  README.md  client.cpp  init.sh  main.cpp  server.cpp  vcpkg.json
